--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - paint app p5js</title>
+  <title>Adithya's paint app</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
